--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,41 @@
-
-
-Hello 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome to the Server</title>
+  <style>
+    body {
+      background-color: #f5f7fa;
+      font-family: Arial, sans-serif;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    p {
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+    }
+    .tag {
+      margin-top: 1rem;
+      background: #3498db;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚀 Server is Live!</h1>
+  <p>If you're seeing this page, the web server is running correctly.</p>
+  <div class="tag">ADS599-Capstone</div>
+</body>
+</html>
